Добавил уже что-то более менее работающее

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "123--91382a9a-fe16-4b7d-aec3-5eb6e465a052--123",
+    "Issuer": "JustMyAuthServerNotFound",
+    "Audience": "WebApp"
+  }
 }
